# zp_eliminator

./: CMakeLists.txt  README.md
benchmark/: zp_benchmarks.cpp
include/zp_eliminator/: vector_kernels.hpp  zp_scalar.hpp
tests/: zp_scalar.cpp  zp_vector.cpp
